added comment on index.html
.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Welcome</title>
 </head>
 <body>
+    <!--Welcome! (index.html): this page should be a general information page 
+    that helps the visitor understand what this site is, and navigate to the 
+    other pages. May be short and simple. Common theme for site: Being a 
+    first-year student (at OsloMet). -->
     
 </body>
 </html>
