50% infrastructure, lager css

--- a/index.html
+++ b/index.html
@@ -12,5 +12,21 @@
     other pages. May be short and simple. Common theme for site: Being a 
     first-year student (at OsloMet). -->
     
+    <div class = "mainBody">
+
+        <div class = "Nav">
+            <!-- Href to other pages, top, horizontal-->
+        </div>
+
+
+
+
+    </div>
+    
+    <div class = "footer">
+        <!-- Trenger vi dette?-->
+
+    </div>
+
 </body>
 </html>
