--- a/accessibility.html
+++ b/accessibility.html
@@ -8,7 +8,31 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <div class = "nav">
+        <!-- Href to other pages, top, horizontal-->
+        <ul>
+            <li><a href="index.html">Das Home</a></li>
+            <li><a href="ref_essay.html">Das Reflection</a></li>
+            <li><a href="accessibility.html">Das accessibility</a></li>
+            <li><a href="topical_information.html">Das topical</a></li>
+            <li><a href="fun_page.html">Das fun</a></li>
 
+        </ul>
+
+
+
+    </div>
+    
+    <div class = "mainBody">
+
+
+
+    </div>
+    
+    <div class = "footer">
+        <!-- Trenger vi dette?-->
+
+    </div>
 
 
 </body>
