--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     other pages. May be short and simple. Common theme for site: Being a 
     first-year student (at OsloMet). -->
     
-    <div class = "Nav">
+    <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
+            <li><a href="index.html">Das Home</a></li>
             <li><a href="ref_essay.html">Das Reflection</a></li>
             <li><a href="accessibility.html">Das accessibility</a></li>
             <li><a href="topical_information.html">Das topical</a></li>
