--- a/ref_essay.html
+++ b/ref_essay.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Reflection</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <div class = "nav">
+        <!-- Href to other pages, top, horizontal-->
+        <ul>
+            <li><a href="index.html">Das Home</a></li>
+            <li><a href="ref_essay.html">Das Reflection</a></li>
+            <li><a href="accessibility.html">Das accessibility</a></li>
+            <li><a href="topical_information.html">Das topical</a></li>
+            <li><a href="fun_page.html">Das fun</a></li>
+
+        </ul>
+
+
+
+    </div>
     
+    <div class = "mainBody">
+
+
+
+    </div>
+    
+    <div class = "footer">
+        <!-- Trenger vi dette?-->
+
+    </div>
 <!--Ich habe das downs from mein enemies-->
 
 </body>
