--- a/accessibility.html
+++ b/accessibility.html
@@ -25,7 +25,14 @@
     
     <div class = "mainBody">
 
-
+        <!-- Accessibility page: It must contain a short presentation of accessibility
+        (up to 500 words describing how the group tested the code for 
+        accessibility using an automated test. Also explain how you checked, 
+        validated, and made coding-choices for universal design beyond what an 
+        automated test can do. You are welcome to use screenshots from the 
+        testing site and of your code. We shall read this text! While the content of 
+        your page is but a minor part of the assessment, this is the text that we 
+        are certain to read. (Grammar not important.)-->
 
     </div>
     
