endringer i css og acc (structure)

--- a/accessibility.html
+++ b/accessibility.html
@@ -23,7 +23,7 @@
 
     </div>
     
-    <div class = "mainBody">
+    <div class = "refBody">
 
         <!-- Accessibility page: It must contain a short presentation of accessibility
         (up to 500 words describing how the group tested the code for 
@@ -33,6 +33,23 @@
         testing site and of your code. We shall read this text! While the content of 
         your page is but a minor part of the assessment, this is the text that we 
         are certain to read. (Grammar not important.)-->
+
+        <!-- Current: Column based content with row, row-divided content instead?-->
+
+        <div class="refImg1">
+            <img src="assets/" alt="Never existed">
+        </div>
+
+        <div class="refContent">
+            <h2>Temp Header</h2>
+            <p>Temp text, sd ajd waj lksldj lkaj lka</p>
+
+        </div>
+
+        <div class = "refImg2">
+            <img src="assets/" alt="Never existed">
+        </div>
+
 
     </div>
     
