Added content to reflection essay
pasted a 500+ story in ref_essay.html

--- a/ref_essay.html
+++ b/ref_essay.html
@@ -31,7 +31,7 @@
         (or work-life) to university. Reflect on any of the following topics:
         a) learning to code, or
         b) being a student rather than a pupil, or
-        c) managing the workload. 
+        c) managing the workload. (done)
     
         Please illustrate with screenshots of code or illustrating images if you 
         can. Else, we recommend using images of OsloMet to create a mix of 
@@ -39,7 +39,46 @@
         language/grammar of the paragraphs. We expect headings, text and 
         images that relate to each other (content). Headings should be 
         informative and grammatically correct (proper visual hierarchy).-->
-
+            <div class = "content">
+                <h2>Our story</h2>
+                <h3>The beginning</h3>
+                <p>
+                    Before attending our course Information Technology at OsloMet, our understanding of IT was minuscule. 
+                    We attended IT in high school as an elective course, but that was nothing compared to what we were about to learn here at OsloMet. 
+                    In the beginning it all seemed easy, with basic structure and stuff we already had heard before, but it escalated quickly. 
+                    We soon realized that we were in deep waters and that if we didn’t keep up, we would drown in heaps of tasks and assignments. 
+                    It was time to take his course a bit more seriously.
+                </p>
+                <h3>Learning to take responsibility</h3>
+                <p>
+                    Realizing that we weren’t pupils anymore we had to take responsibility for our own learning, something we weren’t used to. 
+                    We were now put in a situation where each one of us had to manage our workload and essentially be our own boss. 
+                    Deciding when it was time to work and when you were done for the day became a grey area that often led to packing up early, but in the back of your mind knowing that you should have worked some more. 
+                    Having this feeling of guilt lurking in your subconscious can be draining in the long run. 
+                    Finding a balance has become an unforeseen challenge but is also an important lesson. 
+                    Figuring things out on your own and emerging into adulthood are things we need to adapt to and overcome. 
+                    We all share the struggle of managing workload, but we also share the love for coding and programming. 
+                    That is the sole purpose of us attending this course; to get better at coding and programming. 
+                    This is also the reason why we feel guilty for not doing enough work, our hunger for success and improvement is what makes us put in the hours and struggle through homework on a weekly basis. 
+                </p>
+                <h3>The social hurdle</h3>
+                <p>
+                    Some of us attended this course with no friends to come along, whilst some knew others from before. 
+                    Getting to befriend new people is a challenge in of itself, and it doesn’t make it easier that the course is mostly digitalized. 
+                    Compared to high school which consisted of at least some childhood friends to hang around with, university is a completely new beginning. New classmates, new teachers, a new home, and a whole new lifestyle is quite challenging to adapt to all at once and is a punch in the gut when it comes to your ego and self-confidence. 
+                    Our safe spaces were ripped apart from us and we were left with this big fog of concern and uncertainty. 
+                    Not knowing your role or place in this foreign place can be daunting and scary, especially when you don’t have anyone to turn to for assistance. 
+                    But it is in a time of need one truly grows as a person.
+                </p>
+                <h3>Looking back</h3>
+                <p>
+                    Figuring things on your own instead of just getting things handed to you is an important step if you want to grow as a person. 
+                    And to be frankly, I think we have made some steps in the right direction when it comes to this. 
+                    Not to be over-confident but I think we should be proud of what we have accomplished during this short period of time. 
+                    Not only in terms of academic progress but also social progress. We have found student partners that we now can call for friends. 
+                    We feel like we belong. Able to share interests and crack a few jokes witch. That is gold right there.
+                </p>
+            </div>
     </div>
     
     <div class = "footer">
