La til noen kommentarer
kommentarer ang. idéforslag og ting å gjøre til neste gang.

--- a/accessibility.html
+++ b/accessibility.html
@@ -35,6 +35,7 @@
         are certain to read. (Grammar not important.)-->
 
         <!-- Current: Column based content with row, row-divided content instead?-->
+        <!-- we can try row-divided content to see how it looks like :) -->
 
         <div class="refImg1">
             <img src="assets/" alt="Never existed">
