--- a/ref_essay.html
+++ b/ref_essay.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
+    <div class = "header">
+        <h1>Reflection essay</h1><!--Tenker at dette skal stå oppå bildet(?)-->
+        <img src="assets/header_image_student.jpg" alt="Student in class watching carefully">
+    
+    </div>
+
     <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
@@ -40,7 +47,7 @@
         images that relate to each other (content). Headings should be 
         informative and grammatically correct (proper visual hierarchy).-->
             <div class = "content">
-                <h2>Our story</h2>
+                <h2>Our story</h2> <!--Needs pictures^^-->
                 <h3>The beginning</h3>
                 <p>
                     Before attending our course Information Technology at OsloMet, our understanding of IT was minuscule. 
