--- a/topical_information.html
+++ b/topical_information.html
@@ -23,7 +23,7 @@
 
     </div>
     
-    <div class = "mainBody">
+    <div class = "refBody">
 
         <!--Topical information page: Technology and society (with external links):
         Write – or re-use a short text you have previously written – (anywhere 
@@ -33,12 +33,66 @@
         with relevant information. We shall not grade you on how relevant the 
         information you link to is, but we expect several links and we expect it to 
         be easy to understand before clicking what information you lead us to-->
+            <div class= "content">
+                <h2 class = "h2Ref"> Digital cities and the welfare state </h2>
+                <h3>Future work</h3>
+                <p class = "pRef">
+                    We live in a society that is constantly evolving, and with this we are becoming more dependent on technology. 
+                    It has a big impact on us as and is something a lot of people fear especially when it comes to work. 
+                    This fear might come from the thought of being replaced by more technological solutions. An example of this being cashiers replaced by self-checkouts. 
+                    Contrary to many beliefs we believe that this could lead to many new job opportunities.
+                </p>
+                <p class = "pRef"> 
+                    Entirely out of some speculation, workplaces within factories that are even further automated is not out of the question as it would be efficient in the long run. 
+                    Less manpower and more machine power, whereas the man would be seen as a technician of sorts in most scenarios. 
+                    “Driftstekniker” within the IT/Robotics-department is fairly new and a profession that hasn't been entirely accounted for as a workplace. 
+                    “Driftstekniker” could be the general term for the job opportunities that might appear. 
+                    The recycle process of electric cars shows that its way more complicated than normal batteries, especially when considering the dangers that follow with it. 
+                    A car that has been in any sort of collision that has impacted the batteries must undergo another procedure than the normal ones. 
+                    If we look at these cars like recyclable plastic bottles there should be a way to automate this process and a workplace would be established for taking care of it, 
+                    possibly a section for where impacted batteries will be handled as well (Westrom, 2020).    
+                </p>
 
+                <h3> Views on the Electric scooters </h3>
+                <p class = "pRef"> 
+                    Despite its practical uses the electric scooters pose a threat for the traffic security in compact cities. 
+                    Speaking from personal experience, seeing scooter drivers driving recklessly and irresponsibly makes me uncomfortable driving a car
+                     among these electric scooters. The laws for scooters are shared with how bicycles are driven. The law states that a scooter as a bicycle has
+                      “The duty to yield” and if the person who is riding the scooter is rolling the scooter and walking beside it is now noted as a pedestrian. 
+                      The rules and laws around scooters should be better regulated since there are cases which people do not think twice before they do. 
+                      One rule that some are not aware of is the rule which states the scooters should be parked the right way and there is a wrong way to park the scooter. 
+                      The City council in Oslo has acted to forbid use of scooters from 23 to 05 O’clock. The reason being is according to nettavisen’s article in June there
+                       were 421 injured while using the scooters.
+                 </p>
+                 <p class = "pRef"> 
+                    There were also more than half of the injured that come into the emergency room approximately 55% are influenced by alcohol (Ertesvåg & Lepperød, 2021).     
+                </p>
+                <p class = "pRef">
+                    On the environmental side are the electrical scooters not very environmentally friendly when it is treated in the way that some Oslo citizens are
+                     treating them (Riaz, 2020). This goes to show that the way people are treating the electric scooters are vital for their environmental impact. 
+                    By preventing scooters from being discarded in such a way, it will contribute in getting the scooters to be used much longer,
+                     have a longer lifespan and potentially getting recycled. Having said that, the fact that an electrical scooter is estimated to live up to just
+                      six months is somewhat concerning (Breian, 2019). 
+                    Comparing this to how long a regular car is estimated to last, just goes to show just how use-and-discard this type of invention has become.    
+                </p>
+            </div>
     </div>
     
-    <div class = "footer">
+    <div class = "footerTop">
         <!-- Trenger vi dette?-->
-
+        <h4> Sources: </h4>
+        <p> 
+            Westrom, Dave (2020, 8. October) The Growing use of automation in manufacturing. Machinemetrics: https://www.machinemetrics.com/blog/automation-in-manufacturing
+        </p>
+        <p> 
+            Breian, Å. (2019, 1. mai). Elsparkesyklene varer fra rundt en til rundt seks måneder. Aftenposten: https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder
+        </p>
+        <p> 
+            Ertesvåg, Edvard & Lepperød, Trond (2021, 13. Juli). “Her er de nye reglene for elsparkesykler i Oslo - forbyr utleie på natta” Nettavisen: https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036
+        </p>
+        <p> 
+            Riaz, R. (2020, 12. juni). Fisket opp ti elsparkesykler fra Akerselva. Aftenposten: https://www.aftenposten.no/oslo/i/pL3KgE/fisket-opp-ti-elsparkesykler-fra-akerselva
+        </p>
     </div>
 </body>
 </html>
