--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="Welcome">Welcome</h1> <!--Tenker at denne teksten skal stå oppå bildet(?)-->
     </div>
 
-    <div class = "navTest">
+    <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
             <li><a href="index.html">Home</a></li>
