--- a/topical_information.html
+++ b/topical_information.html
@@ -11,11 +11,11 @@
     <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
-            <li><a href="index.html">Das Home</a></li>
-            <li><a href="ref_essay.html">Das Reflection</a></li>
-            <li><a href="accessibility.html">Das accessibility</a></li>
-            <li><a href="topical_information.html">Das topical</a></li>
-            <li><a href="fun_page.html">Das fun</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="ref_essay.html">Reflection</a></li>
+            <li><a href="accessibility.html">Accessibility</a></li>
+            <li><a href="topical_information.html">Topical</a></li>
+            <li><a href="fun_page.html">Fun</a></li>
 
         </ul>
 
