--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class = "header">
         <h1 id="Welcome">Welcome</h1> <!--Tenker at denne teksten skal stå oppå bildet(?)-->
     </div>
-
+    <a class="skip-to-content" href="#content-start">Skip to content</a>
     <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
@@ -26,13 +26,12 @@
     </div>
     
     <div class = "mainBody">
-        <div class="mainBodyBody">
         <!--Welcome! (index.html): this page should be a general information page 
         that helps the visitor understand what this site is, and navigate to the 
         other pages. May be short and simple. Common theme for site: Being a 
         first-year student (at OsloMet). -->
 
-        <div class="mainIntro">
+        <div id="content-start" class="mainIntro">
             <p class="pIndex">Hey! We are a group of three students having just finished our first semester of our attendance in OsloMet.
                 We have managed to do a lot these past few months and we are excited to share some of it with you.
                 Some of the things we are about to share are prodjects and assignments we have done in the past. 
@@ -40,17 +39,17 @@
             </p>
         </div>
 
+    <div class="container">
         <div class="mainRef">
-            <div class="mainImg">
+            <div class="mainImgL">
                 <img src="assets/header_image_student.jpg" alt="Student in class watching carefully">
             </div>
-            <div class="mainContent">
+            <div class="mainContentR">
                 <h2><a href="ref_essay.html">Reflection</a></h2>
                 <p class="pIndex">Want to know our story through our first semester at OsloMet? Check out our reflection essay! Here we reflect on how our first 
                     impressions of our course was as well as our difficulties and struggles.
                 </p>
             </div>
-
         </div>
 
         <div class="mainAcc">
@@ -75,19 +74,19 @@
         </div>
 
         <div class="mainFun">
-            <div class="mainImg">
+            <div class="mainImgR">
                 <img src="assets/header_image_student.jpg" alt="Student in class watching carefully">
             </div>
-            <div class="mainContent">
+            <div class="mainContentL">
                 <h2> <a href="fun_page.html">Fun Page</a></h2>
                 <p class="pIndex">Here is a little off-topic page that we made for fun. Have a look!</p>
             </div>    
+        </div>
+    </div>
         
-        </div>
-        </div>
-
     </div>
     <p id="ToTheTop"><a href="#Welcome">To the top &uarr;</a></p>
+
     <div class = "footer">
         <!-- Trenger vi dette?-->
 
