--- a/topical_information.html
+++ b/topical_information.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <div class = "header">
+        <h1 id="Title">Topical Information</h1><!--Tenker at dette skal stå oppå bildet(?)-->
+
+    
+    </div>
+
     <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
@@ -34,15 +40,15 @@
         information you link to is, but we expect several links and we expect it to 
         be easy to understand before clicking what information you lead us to-->
             <div class= "content">
-                <h2 class = "h2Ref"> Digital cities and the welfare state </h2>
+                <h2> Digital cities and the welfare state </h2>
                 <h3>Future work</h3>
-                <p class = "pRef">
+                <p class = "pTop">
                     We live in a society that is constantly evolving, and with this we are becoming more dependent on technology. 
                     It has a big impact on us as and is something a lot of people fear especially when it comes to work. 
                     This fear might come from the thought of being replaced by more technological solutions. An example of this being cashiers replaced by self-checkouts. 
                     Contrary to many beliefs we believe that this could lead to many new job opportunities.
                 </p>
-                <p class = "pRef"> 
+                <p class = "pTop"> 
                     Entirely out of some speculation, workplaces within factories that are even further automated is not out of the question as it would be efficient in the long run. 
                     Less manpower and more machine power, whereas the man would be seen as a technician of sorts in most scenarios. 
                     “Driftstekniker” within the IT/Robotics-department is fairly new and a profession that hasn't been entirely accounted for as a workplace. 
@@ -54,7 +60,7 @@
                 </p>
 
                 <h3> Views on the Electric scooters </h3>
-                <p class = "pRef"> 
+                <p class = "pTop"> 
                     Despite its practical uses the electric scooters pose a threat for the traffic security in compact cities. 
                     Speaking from personal experience, seeing scooter drivers driving recklessly and irresponsibly makes me uncomfortable driving a car
                      among these electric scooters. The laws for scooters are shared with how bicycles are driven. The law states that a scooter as a bicycle has
@@ -64,10 +70,10 @@
                       The City council in Oslo has acted to forbid use of scooters from 23 to 05 O’clock. The reason being is according to nettavisen’s article in June there
                        were 421 injured while using the scooters.
                  </p>
-                 <p class = "pRef"> 
+                 <p class = "pTop"> 
                     There were also more than half of the injured that come into the emergency room approximately 55% are influenced by alcohol (Ertesvåg & Lepperød, 2021).     
                 </p>
-                <p class = "pRef">
+                <p class = "pTop">
                     On the environmental side are the electrical scooters not very environmentally friendly when it is treated in the way that some Oslo citizens are
                      treating them (Riaz, 2020). This goes to show that the way people are treating the electric scooters are vital for their environmental impact. 
                     By preventing scooters from being discarded in such a way, it will contribute in getting the scooters to be used much longer,
@@ -82,16 +88,20 @@
         <!-- Trenger vi dette?-->
         <h4> Sources: </h4>
         <p> 
-            Westrom, Dave (2020, 8. October) The Growing use of automation in manufacturing. Machinemetrics: https://www.machinemetrics.com/blog/automation-in-manufacturing
+            Westrom, Dave (2020, 8. October) The Growing use of automation in manufacturing. Machinemetrics: 
+            <a href="https://www.machinemetrics.com/blog/automation-in-manufacturing">https://www.machinemetrics.com/blog/automation-in-manufacturing</a>
         </p>
         <p> 
-            Breian, Å. (2019, 1. mai). Elsparkesyklene varer fra rundt en til rundt seks måneder. Aftenposten: https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder
+            Breian, Å. (2019, 1. mai). Elsparkesyklene varer fra rundt en til rundt seks måneder. Aftenposten: 
+            <a href="https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder">https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder</a>
         </p>
         <p> 
-            Ertesvåg, Edvard & Lepperød, Trond (2021, 13. Juli). “Her er de nye reglene for elsparkesykler i Oslo - forbyr utleie på natta” Nettavisen: https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036
+            Ertesvåg, Edvard & Lepperød, Trond (2021, 13. Juli). “Her er de nye reglene for elsparkesykler i Oslo - forbyr utleie på natta” Nettavisen: 
+            <a href="https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036">https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036</a>
         </p>
         <p> 
-            Riaz, R. (2020, 12. juni). Fisket opp ti elsparkesykler fra Akerselva. Aftenposten: https://www.aftenposten.no/oslo/i/pL3KgE/fisket-opp-ti-elsparkesykler-fra-akerselva
+            Riaz, R. (2020, 12. juni). Fisket opp ti elsparkesykler fra Akerselva. Aftenposten: 
+            <a href="https://www.aftenposten.no/oslo/i/pL3KgE/fisket-opp-ti-elsparkesykler-fra-akerselva">https://www.aftenposten.no/oslo/i/pL3KgE/fisket-opp-ti-elsparkesykler-fra-akerselva</a>
         </p>
     </div>
 </body>
