--- a/fun_page.html
+++ b/fun_page.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
+    <div class = "header">
+        <h1 id="Title">Fun Page </h1><!--Tenker at dette skal stå oppå bildet(?)-->
+    </div>
+
+    <embed src="assets/Evan_King_-_Milkman_Karlson_Theme_-_01_Milkman_Karlson_Theme.mp3" autostart="true" loop="true" height="0">
+    <!-- 'Height="0"' used to hide the audio controls-->
+    
+    <a class="skip-to-content" href="#content-start-fun">Skip to content</a>
     <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
@@ -23,7 +32,7 @@
 
     </div>
     
-    <div class = "mainBody">
+    <div id="content-start-fun" class = "funBody">
 
         <!--Fun page: Make one page that is in a different layout and have a 
         different styling than the others. Put in some text and images. We accept 
