--- a/topical_information.html
+++ b/topical_information.html
@@ -10,10 +10,8 @@
 <body>
     <div class = "header">
         <h1 id="Title">Topical Information</h1><!--Tenker at dette skal stå oppå bildet(?)-->
-
-    
     </div>
-
+    <a class="skip-to-content" href="#content-start-topical">Skip to content</a>
     <div class = "nav">
         <!-- Href to other pages, top, horizontal-->
         <ul>
@@ -29,7 +27,7 @@
 
     </div>
     
-    <div class = "refBody">
+    <div id="content-start-topical" class = "topBody">
 
         <!--Topical information page: Technology and society (with external links):
         Write – or re-use a short text you have previously written – (anywhere 
