--- a/accessibility.html
+++ b/accessibility.html
@@ -40,10 +40,10 @@
 
         <div class="accContent">
             <h2>The process</h2>
-            <p>In the beginning we just wanted a basic layout for our website. 
+            <p class="pAcc">In the beginning we just wanted a basic layout for our website. 
                 A heading-image, title, navigation bar, and a basic content-container. 
                 We chose to use a default font to ensure that every website would have the same font, thus keeping the style consistent between browsers.
-                
+                We purposely sat the max-width of any paragraph to 70 characters, which again is a basic setting.
             </p>
         </div>
 
