--- a/fun_page.html
+++ b/fun_page.html
@@ -48,5 +48,11 @@
         <!-- Trenger vi dette?-->
 
     </div>
+
+    <script>
+        alert("Audio Warning")
+
+
+    </script>
 </body>
 </html>
