--- a/accessibility.html
+++ b/accessibility.html
@@ -44,6 +44,15 @@
                 A heading-image, title, navigation bar, and a basic content-container. 
                 We chose to use a default font to ensure that every website would have the same font, thus keeping the style consistent between browsers.
                 We purposely sat the max-width of any paragraph to 70 characters, which again is a basic setting.
+                <!--
+                * To the top (no physical effort)
+
+                * Nav bar (hvorfor er den slik den er: Stort nok til å trykke på, og lett å se)
+
+                *index.html (hvorfor tok vi bildene sikksakk?)
+
+                *farger (hvorfor brukte vi de fargene vi brukte)
+                -->
             </p>
         </div>
 
