--- a/accessibility.html
+++ b/accessibility.html
@@ -6,22 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accessibility</title>
     <link rel="stylesheet" href="assets/style.css">
+    <script type="text/javascript" src="assets/script.js"></script>
 </head>
 <body>
+
+    <div class = "nav">
+        <!-- Href to other pages, top, horizontal-->
+
+            <!-- LOGO -->
+            <div class="navLE"> <img src="assets/oslomet_logo.png" width=""></img></div>
+            <div class="navL">
+                <ul>
+                    <li><a href="index.html">Home</a></li>          
+                    <li><a href="ref_essay.html">Reflection</a></li>
+                    <li><a href="accessibility.html">Accessibility</a></li>
+                    <li><a href="topical_information.html">Topical</a></li>
+                    <li><a href="fun_page.html">Fun</a></li>
+                </ul>
+            </div>
+    </div>
+
     <div class = "header">
         <h1 id="Accessibility">Accessibility</h1><!--Tenker at dette skal stå oppå bildet(?)-->
     </div>
     <a class="skip-to-content" href="#content-start-accessibility">Skip to content</a>
-    <div class = "nav">
-        <!-- Href to other pages, top, horizontal-->
-        <ul>
-            <li><div class="navL"><a href="index.html">Home</a></div></li>
-            <li><div class="navL"></div><a href="ref_essay.html">Reflection</a></dli></li>
-            <li><div class="navL"><a href="accessibility.html">Accessibility</a></div></li>
-            <li><div class="navL"><a href="topical_information.html">Topical</a></div></li>
-            <li><div class="navL"><a href="fun_page.html">Fun</a></div></li>
-        </ul>
-    </div>
+    
     
     <div id="content-start-accessibility" class = "mainBody">
 
@@ -57,13 +66,14 @@
         </div>
 
     </div>
-    <p id="ToTheTop"><a href="#Welcome">To the top &uarr;</a></p>
+
+    <button onclick="toTheTop()" id="ToTheTop">
+        <img src="assets/uparrow.png" width="20"></img>
+    </button>
 
     <div class = "footer">
         <!-- Trenger vi dette?-->
 
     </div>
-
-
 </body>
 </html>
