--- a/accessibility.html
+++ b/accessibility.html
@@ -14,7 +14,7 @@
         <!-- Href to other pages, top, horizontal-->
 
             <!-- LOGO -->
-            <div class="navLE"> <img src="assets/oslomet_logo.png" width=""></img></div>
+            <div class="navLE"><a href="index.html"><img src="assets/oslomet_logo.png"></img></a></div>
             <div class="navL">
                 <ul>
                     <li><a href="index.html">Home</a></li>          
@@ -52,7 +52,25 @@
             <p class="pAcc">In the beginning we just wanted a basic layout for our website. 
                 A heading-image, title, navigation bar, and a basic content-container. 
                 We chose to use a default font to ensure that every website would have the same font, thus keeping the style consistent between browsers.
-                We purposely sat the max-width of any paragraph to 70 characters, which again is a basic setting.
+                We purposely sat the max-width of any paragraph to 70 characters, which again is a basic setting. 
+                We made “back to top” button so it would be physically difficult or physically draining for people so it to instantly scroll to the top. 
+                It also saves the people time instead of scrolling all the way to the top. 
+                The navigation bar was made with intention for it to be easy for the user to navigate through out the pages. 
+                The first navigation bar was made for it to be easily seen with big bubbles and big text, but in the end looked. 
+                It was later decided that the navigation bar should look nice and be easily used. 
+                The reason we placed the pictures like we did in the home page is to make it look aesthetically pleasing and not too complicated. 
+                The reason we are using these colors are because according to the “Contrast Checker” it gives us a “PASS” on the “WCAG AA” grading on our main colors used on the website. 
+                We are also taking care of the users that are colorblind. 
+                The test we ran gave us websites that look good and usable for the colorblind users in all the categories like “Protanopia”, “Deutanopia”, “Tritanopia and “Achromatopsia”. 
+                This does not only include text, but the pictures are also good to look at. </p>
+                <div class = "images">
+                <img src="assets/contrast_checker.png" alt="a test that checkes the contrast between different colors">
+                </div>
+                <p class="pAcc">
+                We used “media screen” in css to make it accessible for people with either a smaller screen or on a phone and a tablet. 
+                This makes it better for our site to reach a broader audience and to make it useable for people who either has a smaller screen or a big one. 
+                The use of “id” in the different “div” boxes are for people who use screen readers to make them also able to communicate with the website since screen readers use “id” and not “class”.
+                </p>
                 <!--
                 * To the top (no physical effort)
 
