--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Href to other pages, top, horizontal-->
 
             <!-- LOGO -->
-            <div class="navLE"> <img src="assets/oslomet_logo.png" width=""></img></div>
+            <div class="navLE"><a href="index.html"><img src="assets/oslomet_logo.png"></img></a></div>
             <div class="navL">
                 <ul>
                     <li><a href="index.html">Home</a></li>          
@@ -81,7 +81,7 @@
 
         <div class="mainFun">
             <div class="mainImgR">
-                <img src="assets/header_image_student.jpg" alt="Student in class watching carefully">
+                <img src="assets/javascript.png" alt="The javascript logo">
             </div>
             <div class="mainContentL">
                 <h2 class="h2Link"> <a href="fun_page.html">Fun Page</a></h2>
