--- a/ref_essay.html
+++ b/ref_essay.html
@@ -14,7 +14,7 @@
         <!-- Href to other pages, top, horizontal-->
 
             <!-- LOGO -->
-            <div class="navLE"> <img src="assets/oslomet_logo.png" width=""></img></div>
+            <div class="navLE"><a href="index.html"><img src="assets/oslomet_logo.png"></img></a></div>
             <div class="navL">
                 <ul>
                     <li><a href="index.html">Home</a></li>          
@@ -88,10 +88,8 @@
                 <p class="pRef">
                     Some of us attended this course with no friends to come along, whilst some knew others from before. 
                     Getting to befriend new people is a challenge in of itself, and it doesn’t make it easier that the course is mostly digitalized. 
-                    <br>
                     Compared to high school which consisted of at least some childhood friends to hang around with, university is a completely new beginning. New classmates, new teachers, a new home, and a whole new lifestyle is quite challenging to adapt to all at once and is a punch in the gut when it comes to your ego and self-confidence. 
                     Our safe spaces were ripped apart from us and we were left with this big fog of concern and uncertainty.
-                    <br>
                     Not knowing your role or place in this foreign place can be daunting and scary, especially when you don’t have anyone to turn to for assistance. 
                     But it is in a time of need one truly grows as a person.
                 </p>
