--- a/topical_information.html
+++ b/topical_information.html
@@ -13,7 +13,7 @@
         <!-- Href to other pages, top, horizontal-->
 
             <!-- LOGO -->
-            <div class="navLE"> <img src="assets/oslomet_logo.png" width=""></img></div>
+            <div class="navLE"><a href="index.html"><img src="assets/oslomet_logo.png"></img></a></div>
             <div class="navL">
                 <ul>
                     <li><a href="index.html">Home</a></li>          
@@ -41,7 +41,7 @@
         information you link to is, but we expect several links and we expect it to 
         be easy to understand before clicking what information you lead us to-->
             <div class= "content">
-                <h2> Digital cities and the welfare state </h2>
+                <h2 class="h2Top"> Digital cities and the welfare state </h2>
                 <h3>Future work</h3>
                 <p class = "pTop">
                     We live in a society that is constantly evolving, and with this we are becoming more dependent on technology. 
@@ -49,6 +49,7 @@
                     This fear might come from the thought of being replaced by more technological solutions. An example of this being cashiers replaced by self-checkouts. 
                     Contrary to many beliefs we believe that this could lead to many new job opportunities.
                 </p>
+                <br>
                 <p class = "pTop"> 
                     Entirely out of some speculation, workplaces within factories that are even further automated is not out of the question as it would be efficient in the long run. 
                     Less manpower and more machine power, whereas the man would be seen as a technician of sorts in most scenarios. 
@@ -70,10 +71,9 @@
                       One rule that some are not aware of is the rule which states the scooters should be parked the right way and there is a wrong way to park the scooter. 
                       The City council in Oslo has acted to forbid use of scooters from 23 to 05 O’clock. The reason being is according to nettavisen’s article in June there
                        were 421 injured while using the scooters.
-                 </p>
-                 <p class = "pTop"> 
                     There were also more than half of the injured that come into the emergency room approximately 55% are influenced by alcohol (Ertesvåg & Lepperød, 2021).     
                 </p>
+                <br>
                 <p class = "pTop">
                     On the environmental side are the electrical scooters not very environmentally friendly when it is treated in the way that some Oslo citizens are
                      treating them (Riaz, 2020). This goes to show that the way people are treating the electric scooters are vital for their environmental impact. 
