testing testing hyperlinks in topical
did it work?

--- a/topical_information.html
+++ b/topical_information.html
@@ -89,16 +89,19 @@
         <!-- Trenger vi dette?-->
         <h4> Sources: </h4>
         <p> 
-            Westrom, Dave (2020, 8. October) The Growing use of automation in manufacturing. Machinemetrics: 
-            <a href="https://www.machinemetrics.com/blog/automation-in-manufacturing">https://www.machinemetrics.com/blog/automation-in-manufacturing</a>
+            Westrom, Dave (2020, 8. October) The Growing use of automation in manufacturing. 
+            <a href="https://www.machinemetrics.com/blog/automation-in-manufacturing">Machinemetrics:</a>
+        <!--    <a href="https://www.machinemetrics.com/blog/automation-in-manufacturing">https://www.machinemetrics.com/blog/automation-in-manufacturing</a>-->
         </p>
         <p> 
-            Breian, Å. (2019, 1. mai). Elsparkesyklene varer fra rundt en til rundt seks måneder. Aftenposten: 
-            <a href="https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder">https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder</a>
+            Breian, Å. (2019, 1. mai). Elsparkesyklene varer fra rundt en til rundt seks måneder.  
+            <a href="https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder">Aftenposten:</a>
+            <!--<a href="https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder">https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder</a>-->
         </p>
         <p> 
-            Ertesvåg, Edvard & Lepperød, Trond (2021, 13. Juli). “Her er de nye reglene for elsparkesykler i Oslo - forbyr utleie på natta” Nettavisen: 
-            <a href="https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036">https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036</a>
+            Ertesvåg, Edvard & Lepperød, Trond (2021, 13. Juli). “Her er de nye reglene for elsparkesykler i Oslo - forbyr utleie på natta”.  
+            <a href="https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036">Nettavisen:</a>
+            <!--<a href="https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036">https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036</a>-->
         </p>
         <p> 
             Riaz, R. (2020, 12. juni). Fisket opp ti elsparkesykler fra Akerselva. Aftenposten: 
