nav bar adjustments
please work

--- a/topical_information.html
+++ b/topical_information.html
@@ -99,13 +99,13 @@
             <!--<a href="https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder">https://www.aftenposten.no/norge/i/2GVPER/elsparkesyklene-varer-fra-rundt-en-til-ru ndt-seks-maaneder</a>-->
         </p>
         <p> 
-            Ertesvåg, Edvard & Lepperød, Trond (2021, 13. Juli). “Her er de nye reglene for elsparkesykler i Oslo - forbyr utleie på natta”.  
+            Ertesvåg, Edvard & Lepperød, Trond (2021, 13. Juli). “Her er de nye reglene for el-sparkesykler i Oslo - forbyr utleie på natta”.  
             <a href="https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036">Nettavisen:</a>
             <!--<a href="https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036">https://www.nettavisen.no/nyheter/her-er-de-nye-reglene-for-elsparkesykler-i-oslo-for byr-utleie-pa-natten/s/12-95-3424154036</a>-->
         </p>
         <p> 
-            Riaz, R. (2020, 12. juni). Fisket opp ti elsparkesykler fra Akerselva. Aftenposten: 
-            <a href="https://www.aftenposten.no/oslo/i/pL3KgE/fisket-opp-ti-elsparkesykler-fra-akerselva">https://www.aftenposten.no/oslo/i/pL3KgE/fisket-opp-ti-elsparkesykler-fra-akerselva</a>
+            Riaz, R. (2020, 12. juni). Fisket opp ti elsparkesykler fra Akerselva.  
+            <a href="https://www.aftenposten.no/oslo/i/pL3KgE/fisket-opp-ti-elsparkesykler-fra-akerselva">Aftenposten</a>
         </p>
     </div>
 
